<resources>
    <string name="app_name">Virtual CIT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="server_ip">192.168.1.102</string>

    <string name="butt_view_cit">myCIT Portal</string>
    <string name="butt_stu_union_and_serve">Student Union\nand Services</string>
    <string name="butt_timetables">Timetables</string>
    <string name="butt_social_media">Social Media</string>
    <string name="butt_virtual_tour">Virtual Tour</string>
    <string name="butt_find_location">Find Location</string>

    <string name="butt_medical_center">Medical Centre</string>
    <string name="butt_career_counsil">Careers and Counselling</string>
    <string name="butt_disability_services">Disability Services</string>
    <string name="butt_mature_students">Mature Students</string>
    <string name="butt_main_sites">Main Sites</string>
    <string name="butt_view_handbooks">Handbooks</string>

    <string name="butt_handbook_student">View Student Handbook</string>
    <string name="butt_handbook_union">View Union Handbook</string>


    <string name="butt_facebook">Facebook</string>
    <string name="butt_twitter">Twitter</string>

    <string name="butt_cit_location">CIT Location</string>
    <string name="butt_room_location">Room Location</string>

    <string name="butt_locate_room">Locate Room</string>

    <string name="butt_rss_feed">CIT Newsfeed RSS</string>

    <string name="select_room_spinner">Room to Locate</string>
    <string name="butt_about">About</string>


    <string-array name="class_groups_arrays">
        <item>No Filter</item>
        <item>ACCOUNTING</item>
        <item>ADMIN</item>
        <item>ARCHITECTURE</item>
        <item>ARTSOFFICE</item>
        <item>BIOLOGY</item>
        <item>CCAD</item>
        <item>CHEMISTRY</item>
        <item>CIVIL</item>
        <item>COMPUTING</item>
        <item>CONSTRUCTION</item>
        <item>CRAFTSTUDIES</item>
        <item>CSM</item>
        <item>CSMACADEMIC</item>
        <item>CSMKEYBOARD</item>
        <item>CSMSTRINGS</item>
        <item>CSMWIND</item>
        <item>DEIS</item>
        <item>ELECTRICAL</item>
        <item>MANAGEMENT</item>
        <item>MARKETING</item>
        <item>MATHS</item>
        <item>MECHANICAL</item>
        <item>MEDIA</item>
        <item>NMCI</item>
        <item>ONLINE</item>
        <item>ORGANISATION</item>
        <item>PHYSICAL SCIENCES</item>
        <item>PROCESS</item>
        <item>SOCIAL</item>
        <item>SPORT</item>
        <item>TOURISM</item>
    </string-array>

    <string-array name="groups_array">
        <item>Select Class Group</item>
        <item>CO.CLD4-A</item>
        <item>CO.CLD4-B</item>
        <item>CO.CLD5-A-(New)</item>
        <item>CO.CLD5-B-(Fin)</item>
        <item>CO.COM1-A</item>
        <item>CO.COM1-B</item>
        <item>CO.COM2- A</item>
        <item>CO.COM2- B</item>
        <item>CO.COM3-A</item>
        <item>CO.COM3-B</item>
        <item>CO.DCOM1 - A</item>
        <item>CO.DCOM1 - B</item>
        <item>CO.DCOM2-A</item>
        <item>CO.DCOM2-B</item>
        <item>CO.DCOM3</item>
        <item>CO.DCOM4</item>
        <item>CO.DCOM5</item>
        <item>CO.DCOM6</item>
        <item>CO.DNET1</item>
        <item>CO.DNET2</item>
        <item>CO.DNET3</item>
        <item>CO.DNET4</item>
        <item>CO.EV.NWS5</item>
        <item>CO.EVCISCO1</item>
        <item>CO.EVCISCO2</item>
        <item>CO.EVCISCOW1</item>
        <item>CO.EVCOM1-A</item>
        <item>CO.EVCOM1-B</item>
        <item>CO.EVCOM2</item>
        <item>CO.EVCOM3</item>
        <item>CO.EVCOMPTIA</item>
        <item>CO.EVMScCOMSD</item>
        <item>CO.EVMScCOMSD.A</item>
        <item>CO.EVPCHW</item>
        <item>CO.FREECHOICE</item>
        <item>CO.HCCLD</item>
        <item>CO.HDCLD</item>
        <item>CO.HDMOB-A-(New)</item>
        <item>CO.HDMOB-B-(Fin)</item>
        <item>CO.HDSDEV1</item>
        <item>CO.ITM1</item>
        <item>CO.ITM2</item>
        <item>CO.ITM3</item>
        <item>CO.ITM4</item>
        <item>CO.ITS1- A</item>
        <item>CO.ITS1- B</item>
        <item>CO.ITS2</item>
        <item>CO.ITS3</item>
        <item>CO.LINUX</item>
        <item>CO.MScCOMSD.B</item>
        <item>CO.MSCRSCH</item>
        <item>CO.MSCRSCHProj</item>
        <item>CO.MScSD</item>
        <item>CO.NWS5</item>
        <item>CO.VM-WARE</item>
        <item>CO.WEB1</item>
        <item>CO.WEB2</item>
        <item>CO.WEB3</item>
        <item>CO.WEB4</item>
        <item>COMPUTING ELECTIVE HCI</item>
        <item>COMPUTING ELECTIVE HDW</item>
        <item>COMPUTING ELECTIVEMedia DF</item>
        <item>COMPUTING ELECTIVE WEB</item>

    </string-array>

</resources>
